--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,14 @@
         <java.version>17</java.version>
     </properties>
     <dependencies>
+
+        <!-- POM.xml dependency -->
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>2.0.25</version>
+        </dependency>
+
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
