--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -80,6 +80,21 @@ audio:
     xunfei:
       concurrency: 5
       maxInputLength: 20
+    yash_Scoop:
+      concurrency: 1
+      maxInputLength: 500000
+    yash_Doofenshmirtz:
+      concurrency: 1
+      maxInputLength: 500000
+    yash_Vader:
+      concurrency: 1
+      maxInputLength: 500000
+    yash_Gollum:
+      concurrency: 1
+      maxInputLength: 500000
+    yash_Cowboy:
+      concurrency: 1
+      maxInputLength: 500000
 
 
 
